--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "styled-components": "^5.2.0",
     "typescript": "~4.0.3"
   },
+  "homepage": "./",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
