--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bulma": "^0.9.1",
     "luxon": "^1.25.0",
     "react": "^16.14.0",
+    "react-device-detect": "^1.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
